# DataAnalystAgent_Final_N

./: .gitignore  LICENSE  app.py  app_flask.py  app_simple.py  app_working.py  code_executor.py  data_analyzer.py  debug_test.py  gemini_client.py  main.py  pyproject.toml  render.yaml  requirements.txt  test_network.txt  test_sales.txt  test_weather.txt  universal_solver.py  web_scraper.py
prompts/: code_generation.txt  task_breakdown.txt
static/: script.js  style.css
templates/: index.html
